# modbusgw

./: .gitmodules  CMakeLists.txt  main.cpp  modbus_gateway.cpp  modbus_gateway.h  modbus_master_adapter.cpp  modbus_master_adapter.h  modbus_slave_adapter.cpp  modbus_slave_adapter.h  modbus_tcp_slave_adapter.cpp  modbus_tcp_slave_adapter.h  modbus_uart_master_adapter.cpp  modbus_uart_master_adapter.h  protocol_adapter.h
install/: config.xml  modbusgw.service
utils/: timespec.cpp  timespec.h
